--- a/h1n1_vaccine_prediction.ipynb
+++ b/h1n1_vaccine_prediction.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "# FLU VACCINE PREDICTION\n",
+    "![image](H1N1_Flu_Vaccine.jpg)\n",
     "## 1. BUSINESS UNDERSTANDING\n",
     "\n",
     "**Introduction:**\n",
