--- a/h1n1_vaccine_prediction.ipynb
+++ b/h1n1_vaccine_prediction.ipynb
@@ -13,19 +13,17 @@
    "source": [
     "## Overview\n",
     "\n",
-    "In this project, we want to use data from the National Flu Survey (NHFS 2009) to predict whether or not respondents got the H1N1 vaccine. It is important to understand past vaccination patterns in order to understand those of more recent pandemics, such as COVID-19. The most influential factors determining vaccination status are Doctor Recommendation of H1N1 vaccine, Health Insurance, opinion of H1N1 Vaccine effectiveness, opinion of H1N1 risk.\n",
-    "We used six machine learning models to make the predictions. We used Decision Tree Classifier, Logistic Regression, Random Forest, K-Nearest Neighborhood Classifier, Gradient Boosting Classifier, and XG Boosting Classifier. The Gradient Boosting Classifier yielded the best accuracy and precision score.\n",
-    "\n",
+    "In this project, data from the National Flu Survey (NHFS 2009) was utilized to predict whether or not respondents received the H1N1 vaccine. Past vaccination patterns are crucial to understand in order to comprehend those of more recent pandemics, such as COVID-19. The most influential factors determining vaccination status are Doctor Recommendation of the H1N1 vaccine, Health Insurance, opinion of H1N1 Vaccine effectiveness, and opinion of H1N1 risk. Six machine learning models were employed for making predictions, including Decision Tree Classifier, Logistic Regression, Random Forest, K-Nearest Neighborhood Classifier, Gradient Boosting Classifier, and XG Boosting Classifier. The Gradient Boosting Classifier yielded the best accuracy and precision score.\n",
     "\n",
     "## Business Problem\n",
     "\n",
-    "Vaccination, as one of the most successful public health interventions to ever be implemented, led to the elimination and control of diseases that were once common throughout the world. Despite overwhelming medical evidence and the unanimous position of medical professionals in favor of vaccination, the number of people skeptical about vaccination has grown in many countries in recent years. The consequence of this alarming trend is a decline in immunization coverage. Several outbreaks of infectious diseases have been linked to undervaccinated communities. The problem of expanding vaccine rejection has begun to be so widespread that it became the subject of many studies aimed at understanding the sources and correlations of attitudes toward vaccination.\n",
+    "Vaccination, as one of the most successful public health interventions ever implemented, has led to the elimination and control of diseases that were once common throughout the world. Despite overwhelming medical evidence and the unanimous position of medical professionals in favor of vaccination, the number of people skeptical about vaccination has grown in many countries in recent years. The consequence of this alarming trend is a decline in immunization coverage. Several outbreaks of infectious diseases have been linked to undervaccinated communities. The problem of expanding vaccine rejection has begun to be so widespread that it became the subject of many studies aimed at understanding the sources and correlations of attitudes toward vaccination.\n",
     "\n",
-    "The aim of this study is to predict how likely individuals are to receive their H1N1 flu vaccine. We believe the prediction outputs (model and analysis) of this study will give public health professionals and policy makers, as an end user, a clear understanding of factors associated with low vaccination rates. This in turn, enables end users to systematically act on those features hindering people to get vaccinated. \n",
+    "The aim of this study is to predict how likely individuals are to receive their H1N1 flu vaccine. It is believed that the prediction outputs (model and analysis) of this study will give public health professionals and policy makers a clear understanding of factors associated with low vaccination rates. This, in turn, enables them to systematically act on those features hindering people from getting vaccinated.\n",
     "\n",
-    "The methodologies used in these models can be used as a reference for future work, and also can be compared with different models for performance evaluation. In cognizant of the data type we have, and our objectives, multiple machine learning classification models, such as Logistic regression, Decision tree, Random forest, kNN, Gradient Boosting, and XGBoosting are implemented. \n",
+    "The methodologies used in these models can serve as a reference for future work and can also be compared with different models for performance evaluation. Considering the data type and objectives, multiple machine learning classification models, such as Logistic regression, Decision tree, Random forest, kNN, Gradient Boosting, and XGBoosting, were implemented.\n",
     "\n",
-    "So as to classify exactly those who got H1N1 flu shot from those that did not, we need a higher accuracy of the model outputs, as well as a high precision score, which is related to a low false positive rate(those who considered vaccinated but did actually not get h1n1 flu shot). This will be further assessed using the ROC curve, accuracy score, precision score, and confusion matrix."
+    "In order to classify exactly those who received the H1N1 flu shot from those who did not, a higher accuracy of the model outputs, as well as a high precision score, which is related to a low false positive rate (those who considered vaccinated but did actually not get the H1N1 flu shot), are needed. This will be further assessed using the ROC curve, accuracy score, precision score, and confusion matrix."
    ]
   },
   {
@@ -37,30 +35,28 @@
     "**End Users**: Public health officials of the American Public Health Association (APHA)\n",
     "\n",
     "**True business problem**:\n",
-    "- Predicting who is vaccinated or not accurately? (Deliverable: Model)\n",
-    "- What are the factors that influence people get H1N1 vaccine or not?  (Deliverable: Analysis)\n",
-    "\n",
+    "- Accurate prediction of vaccination status: (Deliverable: Model)\n",
+    "- Identification of factors influencing individuals' decision to get the H1N1 vaccine or not: (Deliverable: Analysis)\n",
     "\n",
     "**Context**:\n",
-    "- False negative: Saying people did not get the vaccine when they actually did. \n",
-    "- Outcome: Not a big problem\n",
+    "- False negatives: Individuals wrongly classified as not vaccinated when they actually are.\n",
+    "- Outcome: Not deemed critical.\n",
     "\n",
-    "- False positive: Saying people got the vaccine when they actually did not. \n",
-    "- Outcome: Big problem\n",
+    "- False positives: Individuals wrongly classified as vaccinated when they are not.\n",
+    "- Outcome: Considered significant.\n",
     "\n",
     "**Evaluation**:\n",
-    "We will focus on accuracy, f1, and precision scores for our model iterations in order to minimize False Positives, because in our business context false positives are a much more costly mistake than false negatives.\n",
+    "Accuracy, precision, and F1 scores will be prioritized for model iterations to minimize false positives, as they are more detrimental in our business context than false negatives.\n",
     "\n",
     "- **Accuracy**\n",
     "- **Precision**\n",
     "- Recall\n",
-    "- **F1-Score**\n",
-    "\n"
+    "- **F1-Score**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
