--- a/h1n1_vaccine_prediction.ipynb
+++ b/h1n1_vaccine_prediction.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing Relevant Libraries\n",
+    "# Relevant Libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
